--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_SERVER_URL = https://zing-mp3-api-six.vercel.app/api
+# REACT_APP_SERVER_URL = https://zing-mp3-api-six.vercel.app/api
+REACT_APP_SERVER_URL = http://localhost:5000/api
